@@ -42,7 +42,6 @@ spec:
       sidecar.istio.io/inject: "true"
       traffic.sidecar.istio.io/includeInboundPorts: "*"
       traffic.sidecar.istio.io/excludeInboundPorts: "9443"
-
     imagePullSecrets:
       - name: private-registry
 
