@@ -39,16 +39,14 @@ spec:
 
   values:
     hostname: {{ .Values.hostname }}
-
+    istio:
+      enabled: {{ .Values.istio.enabled }}
     kibana:
       version: 7.9.2
-
       imagePullSecrets:
         - name: private-registry
-
     elasticsearch:
       version: 7.9.2
-
       imagePullSecrets:
         - name: private-registry
 
